fix: put buttons at bottom of page instead of off-screen

--- a/src/app.scss
+++ b/src/app.scss
@@ -166,6 +166,10 @@ html,
 body {
 	width: 100%;
 	height: 100vh;
+
+	@supports (-webkit-touch-callout: none) {
+		height: -webkit-fill-available;
+	}
 }
 
 html {
@@ -178,9 +182,8 @@ body {
 	margin: 0;
 	max-width: 26rem;
 	max-height: 56rem;
-	z-index: 0;
 	background: var(--background);
-	overflow: hidden;
+	overflow: hidden scroll;
 	position: relative;
 
 	@media (min-width: 26rem) {
@@ -192,10 +195,13 @@ body {
 #svelte {
 	display: grid;
 	width: 100%;
-	height: 100%;
+	height: -webkit-fill-available;
 	position: relative;
 	grid-template-rows: min-content auto min-content;
-	overflow: hidden scroll;
+	background: var(--background);
+	overflow-x: hidden;
+	overflow-y: auto;
+	z-index: 0;
 
 	@media (min-width: 26rem) {
 		border-radius: var(--border-radius);
